src/assets/styles/components/inputs/_select.scss
._bcmsInput {
  &--inner {
    &_invalid {
      ._bcmsInput--select {
        &-toggler {
          padding-right: 44px;
          border: 1px solid rgba(var(--red), 1);
          &:hover,
          &:focus-within {
            border-color: rgba(var(--red), 1);
          }
          &_active {
            border-bottom: none;
          }
        }
        &-list {
          border-color: rgba(var(--red), 1);
        }
      }
    }
  }
  &_selectWidth {
    max-width: 320px;
  }
  &--select {
    max-width: 320px;
    position: relative;
    &-toggler {
      @extend %bcmsButton;
      display: flex !important;
      align-items: center;
      transition: border .5s ease !important;
      &:not(:hover) {
        border: 1px solid rgba(var(--grey), 1) !important;
      }
      svg {
        fill: rgba(var(--grey), 1);
        width: 12px;
        display: block;
        transition: all 0.3s ease;
        will-change: transform;
        left: unset;
        right: 0;
        position: relative;
        top: 0;
      }
      &_active {
        svg {
          transform: rotate(-180deg) translateY(1px);
        }
      }
      span {
        padding-right: 14px;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }
      &:disabled {
        cursor: not-allowed;
        border-color: rgba(var(--grey), 0.5);
        &:hover {
          box-shadow: none;
        }
      }
    }
    &-placeholder {
      color: rgba(var(--grey), 1);
    }
    &-list {
      box-shadow: var(--boxShadow);
      max-height: 200px;
      min-width: 150px;
      list-style-type: none;
      position: absolute;
      top: calc(100% + 9px);
      width: 100%;
      background-color: rgba(var(--white), 1);
      border: 1px solid rgba(var(--grey), .2);
      z-index: 100;
      border-radius: 10px;
      transition: box-shadow 0.3s;
      left: 0;
      overflow: auto;
      &-item {
        padding: 9px 18px;
        position: relative;
        cursor: pointer;
        color: rgba(var(--dark), 1);
        transition: color 0.22s;
        display: flex;
        align-items: center;
        img {
          margin-right: 15px;
          width: 24px;
        }
        &:hover,
        &:focus {
          background:rgba(var(--light), 1);
          &::before {
            content: '';
            width: 10px;
            height: 10px;
            display: block;
            background-color: rgba(var(--yellow), 1);
            position: absolute;
            border-radius: 50%;
            top: 50%;
            left: -5px;
            transform: translateY(-50%);
          }
        }
        &_selected {
          &:hover,
          &:focus {
            &::before {
              background-color: rgba(var(--red), 1);
            }
          }
          &::before {
            content: '';
            width: 10px;
            height: 10px;
            display: block;
            background-color: rgba(var(--yellow), 1);
            position: absolute;
            border-radius: 50%;
            top: 50%;
            left: -5px;
            transform: translateY(-50%);
          }
        }
        &_editStatuses {
          color:rgba(var(--green), 1);
          font-weight: 500;
        }
      }
    }
    &-search {
      position: relative;
      display: inline-block;
      border-bottom: 1px solid rgba(var(--grey), 0.5);
      transition: border-color 0.3s;
      margin-top: 10px;
      max-width: 100%;
      margin-bottom: 25px;
      &-list {
        border: none;
      }
      &:focus-within {
        border-bottom-color: rgba(var(--pink), 1);
      }
      svg {
        position: absolute;
        top: 50%;
        left: 0;
        transform: translateY(-50%);
        width: 16px;
        fill: rgba(var(--grey), 0.5) !important;
        margin-right: 10px;
      }
      &-input {
        width: 500px;
        max-width: 100%;
        padding: 10px 0 10px 30px;
        font-size: 14px;
        @include placeholder() {
          color: rgba(var(--grey), 1);
        }
      }
    }
    &_lang {
      ._bcmsInput--select-toggler {
        padding-right: 10px;
        border: unset;
        span {
          padding-right: 6px;
        }
      }
    }
  }
}

